force-app/main/default/objects/Contact/fields/Address_Notes__c.field-meta.xml
<CustomField>
    <fullName>Address_Notes__c</fullName>
    <label>Address Notes</label>
    <type>TextArea</type>
</CustomField>