force-app/main/default/objects/Contact/fields/ambassador__c.field-meta.xml
<CustomField>
    <fullName>ambassador__c</fullName>
    <label>AMSA ambassador</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>