force-app/main/default/objects/Contact/fields/Asst_Email_del__c.field-meta.xml
<CustomField>
    <fullName>Asst_Email_del__c</fullName>
    <label>Asst. Email</label>
    <type>Email</type>
</CustomField>