force-app/main/default/objects/Contact/fields/Child_1__c.field-meta.xml
<CustomField>
    <fullName>Child_1__c</fullName>
    <label>Child 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>