force-app/main/default/objects/Contact/fields/Child_2__c.field-meta.xml
<CustomField>
    <fullName>Child_2__c</fullName>
    <label>Child 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>