force-app/main/default/objects/Contact/fields/Child_3__c.field-meta.xml
<CustomField>
    <fullName>Child_3__c</fullName>
    <label>Child 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>