force-app/main/default/objects/Contact/fields/Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Number__c</fullName>
    <displayFormat>C-{0}</displayFormat>
    <label>Contact Number</label>
    <type>AutoNumber</type>
</CustomField>