force-app/main/default/objects/Contact/fields/Contact_Source__c.field-meta.xml
<CustomField>
    <fullName>Contact_Source__c</fullName>
    <description>Martin Friedman</description>
    <label>Contact Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>-</fullName>
            </value>
            <value>
                <fullName>Alexander von Perfall</fullName>
            </value>
            <value>
                <fullName>Alex Kwit</fullName>
            </value>
            <value>
                <fullName>Ben Barnes</fullName>
            </value>
            <value>
                <fullName>Benjamin Schliemann</fullName>
            </value>
            <value>
                <fullName>Douglas Erb</fullName>
            </value>
            <value>
                <fullName>George Lloyd</fullName>
            </value>
            <value>
                <fullName>Jeff Meckler</fullName>
            </value>
            <value>
                <fullName>Jeffrey McMillen</fullName>
            </value>
            <value>
                <fullName>Jim Reddoch</fullName>
            </value>
            <value>
                <fullName>Joel Jankowsky</fullName>
            </value>
            <value>
                <fullName>Marshall Urist</fullName>
            </value>
            <value>
                <fullName>Martin Friedman</fullName>
            </value>
            <value>
                <fullName>Michelle Zhang</fullName>
            </value>
            <value>
                <fullName>Molly Chiramonte</fullName>
            </value>
            <value>
                <fullName>Pablo Legorreta</fullName>
            </value>
            <value>
                <fullName>Pedro Gonzalez de Cosio</fullName>
            </value>
            <value>
                <fullName>Robert Leonard</fullName>
            </value>
            <value>
                <fullName>Rory Riggs</fullName>
            </value>
            <value>
                <fullName>Sara Klymkowsky</fullName>
            </value>
            <value>
                <fullName>Susan Kaufman</fullName>
            </value>
            <value>
                <fullName>Susannah Gray</fullName>
            </value>
            <value>
                <fullName>Terry Coyne</fullName>
            </value>
            <value>
                <fullName>Wyeth Wiedeman</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>