force-app/main/default/objects/Contact/fields/Contact_Type__c.field-meta.xml
<CustomField>
    <fullName>Contact_Type__c</fullName>
    <label>Contact Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sponsor</fullName>
            </value>
            <value>
                <fullName>Candidate (New)</fullName>
            </value>
            <value>
                <fullName>Candidate (Declined)</fullName>
            </value>
            <value>
                <fullName>Candidate</fullName>
            </value>
            <value>
                <fullName>Fellow</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>ALLIANCE</fullName>
            </value>
            <value>
                <fullName>AMSA</fullName>
            </value>
            <value>
                <fullName>BOT</fullName>
            </value>
            <value>
                <fullName>COMMUNICATIONS</fullName>
            </value>
            <value>
                <fullName>GOVT.RELATIONS</fullName>
            </value>
            <value>
                <fullName>Hospital</fullName>
            </value>
            <value>
                <fullName>OMI</fullName>
            </value>
            <value>
                <fullName>OMI ALLIANCE</fullName>
            </value>
            <value>
                <fullName>OMI/BOT</fullName>
            </value>
            <value>
                <fullName>OUTSOURCE</fullName>
            </value>
            <value>
                <fullName>ROYALTY PHARMA</fullName>
            </value>
            <value>
                <fullName>SELECT.COMMITTEE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>