force-app/main/default/objects/Contact/fields/csnp__Linkedin_ID__c.field-meta.xml
<CustomField>
    <fullName>csnp__Linkedin_ID__c</fullName>
    <label>Linkedin ID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>