force-app/main/default/objects/Contact/fields/csnp__Photo__c.field-meta.xml
<CustomField>
    <fullName>csnp__Photo__c</fullName>
    <formula>IMAGE( csnp__Picture_URL__c , &quot;NO IMAGE&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Photo</label>
    <type>Text</type>
</CustomField>