force-app/main/default/objects/Contact/fields/csnp__Picture_URL__c.field-meta.xml
<CustomField>
    <fullName>csnp__Picture_URL__c</fullName>
    <label>Picture URL</label>
    <type>Url</type>
</CustomField>