force-app/main/default/objects/Contact/fields/csnp__Summary__c.field-meta.xml
<CustomField>
    <fullName>csnp__Summary__c</fullName>
    <label>Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>