force-app/main/default/objects/Contact/fields/Customer_Portal_User__c.field-meta.xml
<CustomField>
    <fullName>Customer_Portal_User__c</fullName>
    <label>Customer Portal User</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>