force-app/main/default/objects/Contact/fields/Extension__c.field-meta.xml
<CustomField>
    <fullName>Extension__c</fullName>
    <description>This field contains an extension (if any) for the phone number above it</description>
    <label>Extension</label>
    <length>10</length>
    <type>Text</type>
</CustomField>