force-app/main/default/objects/Contact/fields/Home_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Home_Street_Address__c</fullName>
    <label>Home Street Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>