force-app/main/default/objects/Contact/fields/Home_Zip__c.field-meta.xml
<CustomField>
    <fullName>Home_Zip__c</fullName>
    <label>Home Zip</label>
    <length>50</length>
    <type>Text</type>
</CustomField>