force-app/main/default/objects/Contact/fields/i__CreatedForUser__c.field-meta.xml
<CustomField>
    <fullName>i__CreatedForUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user on whose behalf the Contact was created</description>
    <label>Created for</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00N700000028MRVEA2</relationshipName>
    <type>Lookup</type>
</CustomField>