force-app/main/default/objects/Contact/fields/i__OtherEmails__c.field-meta.xml
<CustomField>
    <fullName>i__OtherEmails__c</fullName>
    <description>Enter additional email addresses here, one per line</description>
    <inlineHelpText>For Politicians, this is their &apos;Home District&apos;</inlineHelpText>
    <label>Other Email Addresses</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>