force-app/main/default/objects/Contact/fields/LID__LinkedIn_Company_Id__c.field-meta.xml
<CustomField>
    <fullName>LID__LinkedIn_Company_Id__c</fullName>
    <description>LinkedIn Id of the company</description>
    <label>LinkedIn Company Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>