force-app/main/default/objects/Contact/fields/Medical_Speciality__c.field-meta.xml
<CustomField>
    <fullName>Medical_Speciality__c</fullName>
    <label>Medical Speciality</label>
    <type>TextArea</type>
</CustomField>