force-app/main/default/objects/Contact/fields/Medical_Subspeciality__c.field-meta.xml
<CustomField>
    <fullName>Medical_Subspeciality__c</fullName>
    <label>Medical Subspeciality</label>
    <type>TextArea</type>
</CustomField>