force-app/main/default/objects/Contact/fields/Mentor__c.field-meta.xml
<CustomField>
    <fullName>Mentor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>identify the mentor of each Fellow</description>
    <label>Mentor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>