force-app/main/default/objects/Contact/fields/Middle_Name_del__c.field-meta.xml
<CustomField>
    <fullName>Middle_Name_del__c</fullName>
    <label>Middle Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>