force-app/main/default/objects/Contact/fields/Professional_Position__c.field-meta.xml
<CustomField>
    <fullName>Professional_Position__c</fullName>
    <label>Professional Position</label>
    <type>TextArea</type>
</CustomField>