force-app/main/default/objects/Contact/fields/School_of_Medicine__c.field-meta.xml
<CustomField>
    <fullName>School_of_Medicine__c</fullName>
    <label>School of Medicine</label>
    <length>30</length>
    <type>Text</type>
</CustomField>