force-app/main/default/objects/Contact/fields/Shipping_City__c.field-meta.xml
<CustomField>
    <fullName>Shipping_City__c</fullName>
    <label>Shipping City(c)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>