force-app/main/default/objects/Contact/fields/Shipping_Country__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Country__c</fullName>
    <label>Shipping Country(c)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>