force-app/main/default/objects/Contact/fields/Shipping_State__c.field-meta.xml
<CustomField>
    <fullName>Shipping_State__c</fullName>
    <label>Shipping State(c)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>