force-app/main/default/objects/Contact/fields/Shipping_Zip__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Zip__c</fullName>
    <label>Shipping Zip(c)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>