force-app/main/default/objects/Contact/fields/Type_of_Practice__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Practice__c</fullName>
    <label>Type of Practice</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Public Practice</fullName>
            </value>
            <value>
                <fullName>Private Practice</fullName>
            </value>
            <value>
                <fullName>Public and Private</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>