force-app/main/default/objects/Contact/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <description>Unidad de description Instituto</description>
    <label>Account Unit</label>
    <length>70</length>
    <type>Text</type>
</CustomField>