force-app/main/default/objects/Contact/fields/Update__c.field-meta.xml
<CustomField>
    <fullName>Update__c</fullName>
    <description>Fecha en que se ingreso el contacto al account</description>
    <label>Update</label>
    <type>Date</type>
</CustomField>