force-app/main/default/objects/Contact/fields/Work_Country__c.field-meta.xml
<CustomField>
    <fullName>Work_Country__c</fullName>
    <label>Work Country</label>
    <type>TextArea</type>
</CustomField>