force-app/main/default/objects/Contact/fields/Work_Street__c.field-meta.xml
<CustomField>
    <fullName>Work_Street__c</fullName>
    <label>Work Street</label>
    <type>TextArea</type>
</CustomField>