force-app/main/default/objects/Contact/fields/Work_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Work_Zip_Code__c</fullName>
    <label>Work Zip Code</label>
    <type>TextArea</type>
</CustomField>