force-app/main/default/objects/Contact/recordTypes/Alianza_Contact_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Alianza_Contact_Record_Type</fullName>
    <active>true</active>
    <label>Alianza Contact Record Type</label>


</RecordType>