force-app/main/default/objects/Contact/recordTypes/Master_Contact_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Master_Contact_Record_Type</fullName>
    <active>true</active>
    <label>Master Contact Record Type</label>

</RecordType>