force-app/main/default/objects/Contact/listViews/Customer_Portal_Contacts.listView-meta.xml
<ListView>
    <fullName>Customer_Portal_Contacts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Customer_Portal_User__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <label>Customer Portal Contacts</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>