force-app/main/default/objects/Contact/listViews/Master_Campaigns.listView-meta.xml
<ListView>
    <fullName>Master_Campaigns</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>Master Campaigns</label>
</ListView>