force-app/main/default/objects/Contact/listViews/Pharmakon_Advisors_Contacts.listView-meta.xml
<ListView>
    <fullName>Pharmakon_Advisors_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>Customer_Portal_User__c</columns>
    <columns>CONTACT.ADDRESS2_CITY</columns>
    <columns>CONTACT.ADDRESS2_STATE</columns>
    <columns>CONTACT.ADDRESS2_COUNTRY</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>Caprio</value>
    </filters>
    <label>Pharmakon Advisors Contacts</label>
    <sharedTo></sharedTo>
</ListView>