force-app/main/default/objects/Contact/listViews/Prospective_Investor_Contacts.listView-meta.xml
<ListView>
    <fullName>Prospective_Investor_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.DEPARTMENT</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.ADDRESS2_CITY</columns>
    <columns>CONTACT.ADDRESS2_STATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Investment_Status__c</field>
        <operation>equals</operation>
        <value>Prospective Investor</value>
    </filters>
    <label>Prospective Investor Contacts</label>
    <sharedTo></sharedTo>
</ListView>